project-manifests/frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: project-frontend
  name: project-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-frontend
  template:
    metadata:
      labels:
        app: project-frontend
    spec:
      containers:
      - image: public.ecr.aws/i5a7b8h3/nti-project-frontend:v9
        name: project-frontend
